stylesheets/default.css
*{
	font-family: 'Source Sans Pro', sans-serif;
	color: #000000;
}

body {
	margin:0;,
	padding:0;
}



nav{
	top: 0px;
    margin: 0 auto;
    width:300px;
    height: 100%;
	background-color: black;
	float: none;
}

.navButton{
	position: relative;
	height: 100%;
	width: 75px;
	background-color: black;
	float:left;
	text-align: center;
	border:2px black;
	border-radius: 10px;
}




.navButton i{
	position: relative;
	margin-top: auto;
	height: 100%;
	width: 100%;
	color: white;
	border:2px black;
	border-radius: 50px;
}

#navTop{
	background-color: black;
	color: black;
	height: 75px;
	width: 100%;
}

#frontImage {
	height: 450px;
	width: 100%;
	background-image: url("../imgs/chicago.jpg");
	background-attachment: fixed;
}

#bioContainer{
	height: 200px;
	width: 100%;
}

.sectionTitle{
	position: relative;
	height: 100%;
	width: 15%;
	background-color: #b2b7ba;
	text-align: center;
	float:left;
}

.sectionTitle p{
	color: black;
}

.sectionText{
	color:#b2b7ba;
	position: relative;
	height: 100%;
	width: 85%;
	float: right;
	background-color: #b2b7ba;
}

.sectionText p{
	color: black;
	padding-left: 50px;
}

#resumeContainer{
	position: relative;
	width: 100%;
	height: 500px;
	background-color: #484E52;
}

#resumeTitle{
	position: relative;
	height: 100%;
	width: 20%;
	background-color: pink;
	text-align: center;
}

#resumeContentContainer{
	position: relative;
	width: 100%;
	height: 200px;
	background-color: green;
}

.skillContainer{
	position: relative;
	display: inline-block;
	width: 27.5%;
	height: 100%;
	float: right;
	background-color: blue;
}

ul{
}

h3{
	position: absolute;
	color: #fb9b2b;
	text-decoration: underline;
	margin-left: 30px
}

